CSS var cap 60 -> 45, and swapped for width & height to avoid top align

--- a/photos.css
+++ b/photos.css
@@ -55,8 +55,8 @@ div {
 div.grid {
   background-attachment: initial;
   margin: 70px 35px;
-  width: calc(var(--x) + 330px);
-  height: calc(var(--y) + 270px);
+  width: calc(var(--y) + 330px);
+  height: calc(var(--x) + 270px);
   transform: translate(var(--x), var(--y));
 }
 
@@ -72,8 +72,8 @@ div.grid:first-child {
 
 div.grid.zoom {
   margin: 20px 10px;
-  width: calc((var(--x) + 340px) * 2.4);
-  height: calc((var(--y) + 260px) * 2.4);
+  width: calc((var(--y) + 340px) * 2.4);
+  height: calc((var(--x) + 260px) * 2.4);
 }
 
 
@@ -89,8 +89,8 @@ div.grid.zoom {
     transform: translate(calc(var(--x) / 1.5), calc(var(--y) / 2));
   }
   div.grid.zoom {
-    width: calc((var(--x) + 340px) * 2);
-    height: calc((var(--y) + 260px) * 2);
+    width: calc((var(--y) + 340px) * 2);
+    height: calc((var(--x) + 260px) * 2);
   }
 }
 
@@ -101,13 +101,13 @@ div.grid.zoom {
   }
   div.grid {
     margin: 55px 30px;
-    width: calc(var(--x) + 280px);
-    height: calc(var(--y) + 220px);
+    width: calc(var(--y) + 280px);
+    height: calc(var(--x) + 220px);
     transform: translate(calc(var(--x) / 2), calc(var(--y) / 3));
   }
   div.grid.zoom {
-    width: calc((var(--x) + 280px) * 1.8);
-    height: calc((var(--y) + 220px) * 1.8);
+    width: calc((var(--y) + 280px) * 1.8);
+    height: calc((var(--x) + 220px) * 1.8);
   }
 }
 
